--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -1,9 +1,38 @@
 .page {
   display: flex;
   flex: 1 1 100%;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.background {
+  z-index: -1000000;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+}
+
+.card {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.userText {
+  padding: 5px;
+}
+
+.sortButton {
+  margin: 0px
+}
+
+.verticalSpacer {
+  display: flex;
+  flex: 1 1 100%;
+  height: 50px;
 }
 
 .container {
@@ -12,10 +41,4 @@
   justify-content: center;
   align-content: center;
   flex-direction: row;
-}
-
-.spacer {
-  display: flex;
-  flex: 1 1 100%;
-  max-width: 100%;
 }
